Bugfix: reduced word-spacing on social-links to prevent overflow on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ a:hover {
 }
 
 .social-links {
-    word-spacing: 30px;
+    word-spacing: 20px;
     text-align: center;
 }
 
